--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -450,7 +450,7 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>citationmanager</artifactId>
-            <version>1.0.37</version>
+            <version>1.0.38-SNAPSHOT</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
