--- a/common_services/citationmanager_ear/pom.xml
+++ b/common_services/citationmanager_ear/pom.xml
@@ -72,6 +72,11 @@
 							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
+							<groupId>commons-digester</groupId>
+							<artifactId>commons-digester</artifactId>
+							<includeInApplicationXml>true</includeInApplicationXml>
+						</jarModule>
+						<jarModule>
 							<groupId>com.sun</groupId>
 							<artifactId>tools</artifactId>
 							<includeInApplicationXml>true</includeInApplicationXml>
@@ -237,6 +242,13 @@
     	<groupId>com.lowagie</groupId>
     	<artifactId>itext</artifactId>
     	<version>2.1.5</version>
+    </dependency>
+    <dependency>
+    	<groupId>commons-digester</groupId>
+    	<artifactId>commons-digester</artifactId>
+    	<version>1.7</version>
+    	<type>jar</type>
+    	<scope>runtime</scope>
     </dependency>
 	</dependencies>
 
