--- a/common_services/transformation/pom.xml
+++ b/common_services/transformation/pom.xml
@@ -174,11 +174,12 @@
 			<version>2.7.1</version>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
+<!-- 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>citationmanager</artifactId>
 			<version>1.0.38-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
+ -->
 	</dependencies>
 </project>
