--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -533,14 +533,14 @@
         <dependency>
             <groupId>de.mpg.escidoc.pubman</groupId>
             <artifactId>pubman_logic</artifactId>
-            <version>5.0.13</version>
+            <version>5.0.13-SNAPSHOT</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.pubman</groupId>
             <artifactId>pubman_presentation</artifactId>
-            <version>5.0.13</version>
+            <version>5.0.13-SNAPSHOT</version>
             <scope>compile</scope>
             <type>war</type>
         </dependency>
