--- a/pubman/pubman_installer/pom.xml
+++ b/pubman/pubman_installer/pom.xml
@@ -161,7 +161,7 @@
         <dependency>
             <groupId>de.mpg.escidoc.pubman</groupId>
             <artifactId>pubman_ear</artifactId>
-            <version>5.0.13</version>
+            <version>5.0.13-SNAPSHOT</version>
             <scope>provided</scope>
             <type>ear</type>
         </dependency>
