--- a/pubman/pubman_presentation/pom.xml
+++ b/pubman/pubman_presentation/pom.xml
@@ -70,7 +70,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.pubman</groupId>
 			<artifactId>pubman_logic</artifactId>
-			<version>5.0.13</version>
+			<version>5.0.13-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
