--- a/pubman/pubman_logic/pom.xml
+++ b/pubman/pubman_logic/pom.xml
@@ -53,7 +53,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>citationmanager</artifactId>
-			<version>1.0.39-SNAPSHOT</version>
+			<version>1.0.39</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -83,7 +83,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>transformation</artifactId>
-			<version>1.0.21-SNAPSHOT</version>
+			<version>1.0.21</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
