--- a/pubman/pubman_logic/pom.xml
+++ b/pubman/pubman_logic/pom.xml
@@ -71,7 +71,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.32</version>
+			<version>1.1.34-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
