--- a/pubman/pubman_installer/pom.xml
+++ b/pubman/pubman_installer/pom.xml
@@ -168,13 +168,13 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>validation_presentation</artifactId>
-            <version>1.0.38</version>
+            <version>1.0.40-SNAPSHOT</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>framework_access</artifactId>
-            <version>1.0.35</version>
+            <version>1.0.37-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
