--- a/common_services/structuredexportmanager/pom.xml
+++ b/common_services/structuredexportmanager/pom.xml
@@ -137,5 +137,11 @@
 			<version>4.2.2</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>de.mpg.escidoc.services</groupId>
+			<artifactId>common_logic</artifactId>
+			<version>1.1.34-SNAPSHOT</version>
+			<type>ejb</type>
+		</dependency>
 	</dependencies>
 </project>
