--- a/common_services/structuredexportmanager/pom.xml
+++ b/common_services/structuredexportmanager/pom.xml
@@ -143,10 +143,10 @@
 			<version>1.1.34-SNAPSHOT</version>
 			<type>ejb</type>
 		</dependency>
-		<dependency>
-			<groupId>de.mpg.escidoc.services</groupId>
-			<artifactId>transformation</artifactId>
-			<version>1.0.22-SNAPSHOT</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>de.mpg.escidoc.services</groupId>-->
+<!--			<artifactId>transformation</artifactId>-->
+<!--			<version>1.0.22-SNAPSHOT</version>-->
+<!--		</dependency>-->
 	</dependencies>
 </project>
