--- a/common_services/foxml_migration/src/main/resources/log4j.properties
+++ b/common_services/foxml_migration/src/main/resources/log4j.properties
@@ -27,7 +27,8 @@
 log4j.rootLogger=INFO
 log4j.logger.migration=INHERIT, FILE
 log4j.logger.pidreplacement=INHERIT, PID
-###log4j.logger.de.mpg.mpdl.migration=INFO, FILE
+log4j.logger.de.mpg.mpdl.migration=INFO, CONSOLE
+log4j.additivity.de.mpg.mpdl.migration=false
 
 log4j.appender.FILE=org.apache.log4j.FileAppender
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
@@ -40,3 +41,8 @@ log4j.appender.PID.layout=org.apache.log4j.PatternLayout
 log4j.appender.PID.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 log4j.appender.PID.File=pidreplacement.log
 log4j.logger.PID.additivity=false
+
+log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
+log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+log4j.appender.CONSOLE.layout.ConversionPattern=%-5p %m%n
+
