--- a/common_services/cone/pom.xml
+++ b/common_services/cone/pom.xml
@@ -35,7 +35,7 @@
 			</plugin>
 		</plugins>
 	</build>
-
+	
 	
 	<dependencies>
 		<dependency>
@@ -93,4 +93,5 @@
 			<version>8.3-604.jdbc3</version>
 			<scope>provided</scope>
 		</dependency>
-	</project>
+	</dependencies>
+</project>
