--- a/common_services/cone_ear/pom.xml
+++ b/common_services/cone_ear/pom.xml
@@ -46,6 +46,13 @@
 							</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
+							<groupId>de.mpg.escidoc.services</groupId>
+							<artifactId>cone</artifactId>
+							<includeInApplicationXml>
+								true
+							</includeInApplicationXml>
+						</jarModule>
+						<jarModule>
 							<groupId>net.sf.saxon</groupId>
 							<artifactId>saxon</artifactId>
 							<includeInApplicationXml>
@@ -136,6 +143,11 @@
 								true
 							</includeInApplicationXml>
 						</jarModule>
+						<jarModule>
+                            <groupId>com.maxmind.geoip</groupId>
+                            <artifactId>geoip</artifactId>
+                            <includeInApplicationXml>true</includeInApplicationXml>
+                        </jarModule>
 					</modules>
 				</configuration>
 			</plugin>
@@ -298,6 +310,17 @@
 	      <version>3.0.1</version>
 	      <scope>test</scope>
 	    </dependency>
+	    <dependency>
+	    	<groupId>de.mpg.escidoc.services</groupId>
+	    	<artifactId>cone</artifactId>
+	    	<version>1.1.0-SNAPSHOT</version>
+	    	<scope>compile</scope>
+	    </dependency>
+	    <dependency>
+	      	<groupId>com.maxmind.geoip</groupId>
+	      	<artifactId>geoip</artifactId>
+	      	<version>1.2.3</version>
+    	</dependency>
 	</dependencies>
 	
 	<profiles>
