--- a/common_services/pom.xml
+++ b/common_services/pom.xml
@@ -498,7 +498,7 @@
                 <escidoc.cone.rdf.path>c:/temp/projects/common_services/cone_presentation/src/main/resources/</escidoc.cone.rdf.path>
                 <escidoc.cone.maximum.results>50</escidoc.cone.maximum.results>
                 <escidoc.cone.service.url>http://localhost:8080/cone/</escidoc.cone.service.url>
-                <escidoc.cone.modelxml.path>models.xml</escidoc.cone.modelxml.path>
+                <escidoc.cone.modelsxml.path>models.xml</escidoc.cone.modelsxml.path>
 
                 <!-- unAPI -->
                 <escidoc.unapi.download.server>http://localhost:8080/dataacquisition/download/unapi</escidoc.unapi.download.server>
