Added variable for escidoc.cone.modelsxml.path

--- a/common_services/cone_ear/src/test/resources/cone.properties
+++ b/common_services/cone_ear/src/test/resources/cone.properties
@@ -81,3 +81,6 @@ escidoc.cone.maximum.results=${escidoc.cone.maximum.results}
 
 # CoNE default language abbreviation
 escidoc.cone.rdf.path=${escidoc.cone.rdf.path}
+
+#Path to the model.xml file
+escidoc.cone.modelsxml.path=${escidoc.cone.modelsxml.path}
