Added variable for escidoc.cone.modelsxml.path

--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -134,6 +134,9 @@ escidoc.cone.database.name=${escidoc.cone.database.name}
 escidoc.cone.database.user.name=${escidoc.cone.database.user.name}
 escidoc.cone.database.user.password=${escidoc.cone.database.user.password}
 
+#Path to the model.xml file
+escidoc.cone.modelsxml.path=${escidoc.cone.modelsxml.path}
+
 # Import database configuration
 escidoc.import.database.driver.class=${escidoc.import.database.driver.class}
 escidoc.import.database.server.name=${escidoc.import.database.server.name}
