--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -83,6 +83,13 @@
                             </includeInApplicationXml>
                         </jarModule>
                         <jarModule>
+                            <groupId>de.mpg.escidoc.services</groupId>
+                            <artifactId>cone</artifactId>
+                            <includeInApplicationXml>
+                                true 
+                            </includeInApplicationXml>
+                        </jarModule>
+                        <jarModule>
                             <groupId>xmlbeans</groupId>
                             <artifactId>mods_3.2</artifactId>
                             <includeInApplicationXml>true</includeInApplicationXml>
@@ -550,6 +557,13 @@
             <version>1.0.11</version>
             <scope>compile</scope>
             <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>de.mpg.escidoc.services</groupId>
+            <artifactId>cone</artifactId>
+            <version>1.1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>xmlunit</groupId>
