Added property for NIMS statistic link

--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -185,6 +185,12 @@ escidoc.statistics.max_mind_geo_lite_city_db.location=${escidoc.statistics.max_m
 #true if Ips should be stored in a truncated version (last three digits are removed) for the statistics, false if full IPs should be stored
 escidoc.statistics.shortenedIps=${escidoc.statistics.shortenedIps}
 
+#The given link will be displayed on the ViewItemStatistics Page as "Detailed Statistics" for the contexts given in the next property
+escidoc.pubman.statistics.nims.link=${escidoc.pubman.statistics.nims.link}
+
+#A list of comma-seperated context ids for which the "Detailed Statistics" link should be displayed.
+escidoc.pubman.statistics.nims.context.ids =${escidoc.pubman.statistics.nims.context.ids}
+
 escidoc.pubman.favicon.apply=${escidoc.pubman.favicon.apply}
 escidoc.pubman.favicon.url=${escidoc.pubman.favicon.url}
 
