--- a/common_services/fao_ingestion/.settings/org.eclipse.jdt.core.prefs
+++ b/common_services/fao_ingestion/.settings/org.eclipse.jdt.core.prefs
@@ -1,4 +1,4 @@
-#Mon Oct 19 10:58:52 CEST 2009
+#Thu Dec 17 09:19:55 CET 2009
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
 org.eclipse.jdt.core.compiler.compliance=1.5
