--- a/common_services/fao_ingestion/src/main/resources/log4j.properties
+++ b/common_services/fao_ingestion/src/main/resources/log4j.properties
@@ -32,7 +32,8 @@ log4j.additivity.org.fao.oa.ingestion=false
 log4j.additivity.com.hp.hpl.jena.rdf=false
 log4j.appender.FILE=org.apache.log4j.FileAppender
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.FILE.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
+# log4j.appender.FILE.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
+log4j.appender.FILE.layout.ConversionPattern=%d{DATE} - %m%n
 log4j.appender.FILE.File=ingestion.log
 log4j.logger.FILE.additivity=false
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
