--- a/common_services/fao_ingestion/src/main/resources/ingestion.properties
+++ b/common_services/fao_ingestion/src/main/resources/ingestion.properties
@@ -10,7 +10,8 @@ eims.export.file.names = eims_expmin99.xml eims_exp1999.xml eims_exp2000.xml eim
 # the base directory of the FAODOC export file(s)
 faodoc.export.file.location = /home/frank/data/AGRIS_FAO/20090910-FaodocExport/
 # the file name(s) of the FAODOC export file(s) seperated by a single white space
-faodoc.export.file.names = AM-1.xml AMS-1.xml AS-1.xml M-1.xml M-2.xml M-3.xml M-4.xml MS-1.xml
+# faodoc.export.file.names = AM-1.xml AMS-1.xml AS-1.xml M-1.xml M-2.xml M-3.xml M-4.xml MS-1.xml
+faodoc.export.file.names = AM-1.xml AMS-1.xml AS-1.xml updated_100120/M-1_result.xml updated_100120/M-2_result.xml updated_100120/M-3_result.xml updated_100120/M-4_result.xml updated_100120/MS-1_result.xml
 
 # the base directory of the FAO URI files derived from the WorkBench-Data.mdb
 fao.uris.file.location = /home/frank/data/AGRIS_FAO/URIs/
