--- a/common_services/fao_ingestion/src/main/resources/ingestion.properties
+++ b/common_services/fao_ingestion/src/main/resources/ingestion.properties
@@ -8,10 +8,10 @@ eims.export.file.location = /home/frank/data/AGRIS_FAO/20090910-EIMSExport/final
 eims.export.file.names = eims_expmin99.xml eims_exp1999.xml eims_exp2000.xml eims_exp2001.xml eims_exp2002.xml eims_exp2003.xml eims_exp2004.xml eims_exp2005.xml eims_exp2006.xml eims_exp2007.xml eims_exp2008.xml eims_exp2009.xml eims_expnull.xml
 
 # the base directory of the FAODOC export file(s)
-faodoc.export.file.location = /home/frank/data/AGRIS_FAO/20090910-FaodocExport/
+faodoc.export.file.location = /home/frank/data/AGRIS_FAO/20090910-FaodocExport/updated_100126/
 # the file name(s) of the FAODOC export file(s) seperated by a single white space
 # faodoc.export.file.names = AM-1.xml AMS-1.xml AS-1.xml M-1.xml M-2.xml M-3.xml M-4.xml MS-1.xml
-faodoc.export.file.names = AM-1.xml AMS-1.xml AS-1.xml updated_100120/M-1_result.xml updated_100120/M-2_result.xml updated_100120/M-3_result.xml updated_100120/M-4_result.xml updated_100120/MS-1_result.xml
+faodoc.export.file.names = AM-1_result.xml AMS-1_result.xml AS-1_result.xml M-1_result.xml M-2_result.xml M-3_result.xml M-4_result.xml MS-1_result.xml
 
 # the base directory of the FAO URI files derived from the WorkBench-Data.mdb
 fao.uris.file.location = /home/frank/data/AGRIS_FAO/URIs/
